--- a/gateway/application-dev.properties
+++ b/gateway/application-dev.properties
@@ -21,7 +21,7 @@ spring.cloud.gateway.routes[2].predicates[0]=Path=/eureka/web
 spring.cloud.gateway.routes[2].filters[0]=SetPath=/
 
 ## Discover Server Static Resources Route
-spring.cloud.gateway.routes[3].id=discovery-server
+spring.cloud.gateway.routes[3].id=discovery-server-static
 spring.cloud.gateway.routes[3].uri=http://discovery-server
 spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
 
