--- a/gateway-dev.properties
+++ b/gateway-dev.properties
@@ -16,13 +16,13 @@ spring.cloud.gateway.routes.[1].predicates[0]=Path=/api/inventory/**
 
 ## Discover Server Route
 spring.cloud.gateway.routes[2].id=discovery-server
-spring.cloud.gateway.routes[2].uri=http://discovery-server
+spring.cloud.gateway.routes[2].uri=lb://discovery-server
 spring.cloud.gateway.routes[2].predicates[0]=Path=/eureka/web
 spring.cloud.gateway.routes[2].filters[0]=SetPath=/
 
 ## Discover Server Static Resources Route
 spring.cloud.gateway.routes[3].id=discovery-server-static
-spring.cloud.gateway.routes[3].uri=http://discovery-server
+spring.cloud.gateway.routes[3].uri=lb://discovery-server
 spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
 
 
