--- a/gateway-dev.properties
+++ b/gateway-dev.properties
@@ -15,14 +15,14 @@ spring.cloud.gateway.routes.[1].predicates[0]=Path=/api/inventory/**
 
 
 ## Discover Server Route
-spring.cloud.gateway.routes[2].id=discovery-server
-spring.cloud.gateway.routes[2].uri=http://discovery-server
+spring.cloud.gateway.routes[2].id=discover-server
+spring.cloud.gateway.routes[2].uri=http://discover-server
 spring.cloud.gateway.routes[2].predicates[0]=Path=/eureka/web
 spring.cloud.gateway.routes[2].filters[0]=SetPath=/
 
 ## Discover Server Static Resources Route
-spring.cloud.gateway.routes[3].id=discovery-server-static
-spring.cloud.gateway.routes[3].uri=http://discovery-server
+spring.cloud.gateway.routes[3].id=discover-server-static
+spring.cloud.gateway.routes[3].uri=http://discover-server
 spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
 
 
@@ -35,4 +35,4 @@ logging.level.org.springframework.cloud.gateway=TRACE
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.serviceUrl.defaultZone: http://discovery-server:8761/eureka/
+eureka.client.serviceUrl.defaultZone: http://discover-server:8761/eureka/
