--- a/gateway-local.properties
+++ b/gateway-local.properties
@@ -15,13 +15,13 @@ spring.cloud.gateway.routes.[1].predicates[0]=Path=/api/inventory/**
 
 
 ## Discover Server Route
-spring.cloud.gateway.routes[2].id=discovery-server
+spring.cloud.gateway.routes[2].id=discover-server
 spring.cloud.gateway.routes[2].uri=http://localhost:8761
 spring.cloud.gateway.routes[2].predicates[0]=Path=/eureka/web
 spring.cloud.gateway.routes[2].filters[0]=SetPath=/
 
 ## Discover Server Static Resources Route
-spring.cloud.gateway.routes[3].id=discovery-server-static
+spring.cloud.gateway.routes[3].id=discover-server-static
 spring.cloud.gateway.routes[3].uri=http://localhost:8761
 spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
 
