--- a/inventory-dev.properties
+++ b/inventory-dev.properties
@@ -4,4 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
-eureka.client.serviceUrl.defaultZone: http://discovery-server:8761/eureka/
+eureka.client.serviceUrl.defaultZone: http://discover-server:8761/eureka/
