--- a/orchestrator-dev.properties
+++ b/orchestrator-dev.properties
@@ -8,4 +8,4 @@ refund_payment_service_api = http://gateway/api/payment/refund
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.serviceUrl.defaultZone: http://discovery-server:8761/eureka/
+eureka.client.serviceUrl.defaultZone: http://discover-server:8761/eureka/
