--- a/orderservice-dev.properties
+++ b/orderservice-dev.properties
@@ -11,4 +11,4 @@ spring.kafka.bootstrap-servers=kafkaservice:9092
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.serviceUrl.defaultZone: http://discovery-server:8761/eureka/
+eureka.client.serviceUrl.defaultZone: http://discover-server:8761/eureka/
