--- a/paymentservice-dev.properties
+++ b/paymentservice-dev.properties
@@ -6,4 +6,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.serviceUrl.defaultZone: http://discovery-server:8761/eureka/
+eureka.client.serviceUrl.defaultZone: http://discover-server:8761/eureka/
